--- a/part1/fetchingGiphy/index.html
+++ b/part1/fetchingGiphy/index.html
@@ -16,7 +16,8 @@
     <!-- This will kick off our API call -->
     <button class="btn btn-secondary" onclick="fetchGifs()">Fetch Gifs</button>
     <!-- This is a container to display our gifs -->
-    <div id="gif-container"></div>
+    <div id="gif-container">
+    </div>
   </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
